tests/Checker/everything/errors/5e.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *5: identifier undeclared
Compilation was unsuccessful.
